Actualizar archivo .env.template y docker-compose.yml para reflejar nuevos valores de configuración de puertos y credenciales de base de datos.

--- a/.env.template
+++ b/.env.template
@@ -1,40 +1,19 @@
+# Variables de entorno para la aplicación de licitaciones
+
 # Frontend
-VITE_HOST_API_CROPCO=http://localhost:3000/
-VITE_STATUS_PROJECT=development
-VITE_PORT_FRONTEND_CONTAINER=8081
+VITE_PORT_FRONTEND_CONTAINER=8090
+VITE_API_URL=http://localhost:3005
 
 # Backend
-DB_HOST=server-db
-DB_PORT=5432
-DB_USERNAME=postgres
-DB_PASSWORD=root
-DB_NAME=cropco
-JWT_SECRET=millavesecreta
-PORT_BACKEND_CONTAINER=3000
-HOST_FRONTED=https://cropco.netlify.app
-DB_CA_CERT_PATH=certs/ca-certificate.crt
-STATUS_PROJECT=development
-TENANT_ENCRYPTION_KEY=default-key-change
-
-# Database
-POSTGRES_DB=cropco
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=root
-
-
-# otros
-
-# Database Configuration
-DB_HOST=localhost
+PORT_BACKEND_CONTAINER=3005
+PORT_APP=3004
+NODE_ENV=development
+JWT_SECRET=tu_jwt_secret_muy_seguro_aqui
 DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=root123
+
+# Base de datos
+DB_USERNAME=licitaciones_user
+DB_PASSWORD=licitaciones_password_2025
 DB_NAME=licitaciones_management
 
-# App Configuration
-PORT=3000
-NODE_ENV=development
-
-# JWT Configuration
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
-JWT_EXPIRES_IN=24h
+PHMADMIN_PORT=8095
