--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,12 @@ services:
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
     container_name: phpmyadmin-licitaciones
+    environment:
+      - PMA_HOST=server-db-licitaciones-multi-tenant
+      - PM_PORT=${DB_PORT}
+      - PMA_USER=${DB_USERNAME}
+      - PMA_PASSWORD=${DB_PASSWORD}
+      # - PMA_DB=${DB_NAME}
     ports:
       - '${PHMADMIN_PORT}:80'
     depends_on:
