Agregar variables de entorno para AWS en .env.template y docker-compose.yml, permitiendo la configuración de acceso a S3.

--- a/.env.template
+++ b/.env.template
@@ -16,4 +16,9 @@ DB_USERNAME=licitaciones_user
 DB_PASSWORD=licitaciones_password_2025
 DB_NAME=licitaciones_management
 
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+AWS_REGION=us-east-1
+S3_BUCKET_NAME=your-s3-bucket-name
+
 PHMADMIN_PORT=8095
