--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,10 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - PORT_APP=${PORT_APP}
       - NODE_ENV=${NODE_ENV}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_REGION=${AWS_REGION}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
     volumes:
       - data-logs-licitaciones-backend:/app/logs #TODO: Pendiente de configurar
     depends_on:
