--- a/.env.template
+++ b/.env.template
@@ -20,5 +20,5 @@ AWS_ACCESS_KEY_ID=your-aws-access-key-id
 AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
 AWS_REGION=us-east-1
 S3_BUCKET_NAME=your-s3-bucket-name
-
+S3_ENDPOINT=https://demo.com
 PHMADMIN_PORT=8095
