Agregar variable DB_ROOT_PASSWORD en .env.template y actualizar docker-compose.yml para utilizarla como contraseña de root en MySQL.

--- a/.env.template
+++ b/.env.template
@@ -14,6 +14,7 @@ DB_PORT=3306
 # Base de datos
 DB_USERNAME=licitaciones_user
 DB_PASSWORD=licitaciones_password_2025
+DB_ROOT_PASSWORD=my-root-pass
 DB_NAME=licitaciones_management
 
 AWS_ACCESS_KEY_ID=your-aws-access-key-id
